# dyd

./: Cargo.toml  LICENSE  README.md
examples/: .jude_plugin.rs.swp  impl_all_func_and_fields.rs  impl_partially_func_and_fields.rs  jude_plugin.rs  jude_plugin_app.rs  jude_plugin_new.rs  jude_plugin_new_app.rs  main.rs-back  my_struct.rs  shared_1.rs  shared_2.rs  shared_tmpl.rs
src/: dyd.rs-back  dyd_error.rs-back  lib.rs
