[package]
name = "jude"
version = "0.1.0"
authors = ["solomatovs <solomatovs@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/solomatovs/jude"
repository = "https://github.com/solomatovs/jude"
readme = "README.md"
description = "trash from ussr"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = { version = "0.8.3" }
