[package]
name = "jude"
version = "0.1.1"
authors = ["solomatovs <solomatovs@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/solomatovs/jude"
repository = "https://github.com/solomatovs/jude"
documentation = "https://github.com/solomatovs/jude"
readme = "README.md"
description = "dynamic reloading of shared libraries"
keywords = ["jude", "dynamic", "plugins", "reload", "sharedlibrary"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8.*"


[[example]]
name = "shared_1"
path = "examples/shared_1.rs"
crate-type = ["cdylib"]

[[example]]
name = "shared_2"
path = "examples/shared_2.rs"
crate-type = ["cdylib"]

[[example]]
name = "impl_all_func_and_fields"
path = "examples/impl_all_func_and_fields.rs"
crate-type = ["bin"]

[[example]]
name = "shared_tmpl"
path = "examples/shared_tmpl.rs"
crate-type = ["bin"]
