[package]
name = "jude"
version = "0.1.2"
authors = ["solomatovs <solomatovs@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/solomatovs/jude"
repository = "https://github.com/solomatovs/jude"
documentation = "https://github.com/solomatovs/jude"
readme = "README.md"
description = "dynamic reloading of shared libraries"
keywords = ["jude", "dynamic", "plugins", "reload", "sharedlibrary"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8.*"


[[example]]
name = "jude_plugin"
path = "examples/jude_plugin.rs"
crate-type = ["cdylib"]

[[example]]
name = "jude_plugin_app"
path = "examples/jude_plugin_app.rs"
crate-type = ["bin"]

[[example]]
name = "impl_all_func_and_fields"
path = "examples/impl_all_func_and_fields.rs"
crate-type = ["bin"]
